--- a/semester1/css/style_k.css
+++ b/semester1/css/style_k.css
@@ -52,6 +52,14 @@ a:hover {
     color: var(--secondary);
 }
 
+.navbar-brand {
+    width: fit-content;
+}
+
+.logo{
+    width: 250px;
+}
+
 span {
     font-weight: bolder;
 }
